# framr

./: .gitignore  Cargo.toml  PKGBUILD  PKGBUILD-bin  README.md  flake.nix
.github/workflows/: aur-release.yml  build.yml  cachix.yml  release.yml
assets/: framr-handler.desktop
libframr/: Cargo.toml
libframr/src/: buffer.rs  capture.rs  connection.rs  convert.rs  dispatch.rs  encoding.rs  error.rs  lib.rs  output.rs  transform.rs
libframr/src/backend/: mod.rs
libframr/src/backend/kde/: mod.rs  record.rs
libframr/src/backend/wlr/: capture.rs  core.rs  dispatch.rs  mod.rs  record.rs  shm.rs
nix/: hm-module.nix
src/: cli.rs  main.rs  pidfile.rs  sound.rs  upload.rs
src/app/: capture.rs  mod.rs  record.rs
src/config/: cli_ui.rs  core.rs  handler.rs  import.rs  macros.rs  mod.rs  types.rs
src/selection/: graphics.rs  mod.rs  state.rs  ui.rs  window.rs
src/selection/backend/: wayland.rs
src/selection/tools/: annotate.rs  arrow.rs  blur.rs  checkmark.rs  circle.rs  counter.rs  helpers.rs  highlight.rs  mod.rs  pixelate.rs  rectangle.rs  select.rs  text.rs
src/utils/: clipboard.rs  mod.rs  notify.rs
