[package]
name = "framr"
version = "0.8.2"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
libframr = { path = "./libframr" }
libc = "0.2"
ureq = { version = "3", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wl-clipboard-rs = "0.9"
confy = "2"
anyhow = "1.0"
console = "0.16"
dialoguer = "0.12"
infer = "0.19"
shellexpand = "3.1.2"
dirs = "6.0.0"
base64 = "0.22.1"
notify-rust = { version = "4", features = ["d", "images_no_default_features"], default-features = false }
ctrlc = "3.4"
pango = "0.22.6"
pangocairo = "0.22.0"
cairo-rs = { version = "0.22.0", default-features = false }
fastblur = "0.1.1"
wayland-client = "0.31"
wayland-protocols = "0.32"
smithay-client-toolkit = "0.20"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
csscolorparser = "0.8"
gstreamer = "0.25"


[package.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell"]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
