[package]
name = "framr"
version = "0.13.0"
edition = "2024"
description = "Wayland screenshot, annotation and screen recording tool with ShareX-compatible uploads"
license = "AGPL-3.0-only"
repository = "https://github.com/vMohammad24/framr"
authors = ["vMohammad <vmohammad@vmohammad.dev>"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg"] }
libframr = { path = "./libframr" }
libc = "0.2"
ureq = { version = "3", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wl-clipboard-rs = "0.9"
confy = "2"
anyhow = "1.0"
console = "0.16"
dialoguer = "0.12"
infer = "0.19"
shellexpand = "3"
dirs = "6"
base64 = "0.22"
notify-rust = { version = "4", features = ["d", "images_no_default_features"], default-features = false }
ctrlc = "3"
pango = "0.22"
pangocairo = "0.22"
cairo-rs = { version = "0.22", default-features = false }
fastblur = "0.1"
wayland-client = "0.31"
wayland-protocols = "0.32"
smithay-client-toolkit = "0.20"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
csscolorparser = "0.8"
gstreamer = "0.25"
swayipc = "4"


[package.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell"]

[package.metadata.deb]
extended-description = "FramR captures screenshots and screen recordings on Wayland (wlroots compositors and KDE Plasma), with built-in annotation tools and uploads to any ShareX- or iShare-compatible host."
depends = "libwayland-client0, libxkbcommon0, libcairo2, libpango-1.0-0, libpangocairo-1.0-0, libdbus-1-3, libxcursor1, libgstreamer1.0-0, libgstreamer-plugins-base1.0-0, gstreamer1.0-plugins-base, gstreamer1.0-plugins-good, gstreamer1.0-pipewire"
assets = [
	["target/release/framr", "usr/bin/", "755"],
	["assets/framr-handler.desktop", "usr/share/applications/", "644"],
	["LICENSE", "usr/share/doc/framr/", "644"],
]

[package.metadata.generate-rpm]
auto-req = "no"
assets = [
	{ source = "target/release/framr", dest = "/usr/bin/framr", mode = "755" },
	{ source = "assets/framr-handler.desktop", dest = "/usr/share/applications/framr-handler.desktop", mode = "644" },
	{ source = "LICENSE", dest = "/usr/share/licenses/framr/LICENSE", mode = "644", doc = true },
]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
